--- a/.github/workflows/build_deploy.yml
+++ b/.github/workflows/build_deploy.yml
@@ -37,7 +37,7 @@ jobs:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
     - run: yarn install --frozen-lockfile
-    - run: yarn build
+    - run: yarn build --base "${{ steps.pages.outputs.base_url }}/"
     - name: Upload artifact
       uses: actions/upload-pages-artifact@v1
       with:
