--- a/.github/workflows/build_deploy.yml
+++ b/.github/workflows/build_deploy.yml
@@ -37,6 +37,8 @@ jobs:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
     - run: yarn install --frozen-lockfile
+    - run: yarn prettier
+    - run: yarn lint
     - run: yarn build --base "${{ steps.pages.outputs.base_url }}/"
     - name: Upload artifact
       uses: actions/upload-pages-artifact@v1
