--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -10,5 +10,6 @@ updates:
     schedule:
       interval: "monthly"
   - package-ecosystem: github-actions
+    directory: /
     schedule:
       interval: monthly
